hw-deployment-svc.yaml
---
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: flux-test-hw
  labels:
    app: flux-hw
  annotations:
    fluxcd.io/automated: 'true'
spec:
  selector:
    matchLabels:
      app: flux-hw
  replicas: 1
  template:
    metadata:
      labels:
        app: flux-hw
    spec:
      containers:
      - name: flux-test-hw
        image: gcr.io/non-prod-258311/hw:newv1
        # TODO: need to figure out what pull policy is required w/ flux deployments
        imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: flux-hw-service
  labels:
    app: flux-hw-service
spec:
  selector:
    app: flux-hw
  ports:
  - name: http
    port: 3000
    targetPort: 3000
