hw-gw.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: flux-hw-gateway
  namespace: default
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - hosts:
    - "*"      # frontend http
    port:
      name: http-flux-hw
      number: 80
      protocol: HTTP
---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: flux-hw-virtual-service
  namespace: default
spec:
  hosts:
  - "*"
  gateways:
  - flux-hw-gateway
  http:
  - name: flux-hw-route
    route:
    - destination:
        host: flux-hw-service.default.svc.cluster.local
        port:
          number: 3000
